--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <title>
 #300
 </title>
+  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-7237523410300148",
+    enable_page_level_ads: true
+  });
+</script>
 </head>
 <body>
 <p>(X) Flaws</p>
