--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
 #300
 </title>
   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-<script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-    google_ad_client: "ca-pub-7237523410300148",
-    enable_page_level_ads: true
-  });
-</script>
+  <div id="particles-js"></div>
+  <script src="particles.js"></script>
 </head>
 <body>
 <p>UNDER CONSTRUCTION</p>
