--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <title>
 #300
 </title>
-  <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   <div id="particles-js"></div>
-  <script src="particles.js"></script>
+  <script type="text/javascript" src="particles.js"></script>
+  <script type="text/javascript" src="app.js"></script>
 </head>
 <body>
 <p>UNDER CONSTRUCTION</p>
