--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <title>
 #300
 </title>
+  <link href="style.css" rel="stylesheet">
   <div id="particles-js"></div>
   <script type="text/javascript" src="particles.js"></script>
   <script type="text/javascript" src="app.js"></script>
