--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
   <script type="text/javascript" src="app.js"></script>
 </head>
 <body>
+<!-- particles.js container -->
 <div id="particles-js"></div>
+
+<!-- stats - count particles -->
+<div class="count-particles">
+  <span class="js-count-particles">--</span> particles
+</div>
+
+<!-- particles.js lib (JavaScript CodePen settings): https://github.com/VincentGarreau/particles.js -->
 </body>
 </html>
