--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
-<html>
+<!DOCTYPE html>
+<html >
 <head>
-<title>
-#300
-</title>
-  <link href="style.css" rel="stylesheet">
-  <script type="text/javascript" src="particles.js"></script>
-  <script type="text/javascript" src="app.js"></script>
+  <meta charset="UTF-8">
+  <title>nikalys</title>
+      <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<!-- particles.js container -->
-<div id="particles-js"></div>
-
-<!-- stats - count particles -->
-<div class="count-particles">
-  <span class="js-count-particles">--</span> particles
-</div>
-
-<!-- particles.js lib (JavaScript CodePen settings): https://github.com/VincentGarreau/particles.js -->
+    <div class="text">
+        <center>
+    <h1>nikalys</h1>
+    <p>snapchat: stepgigs</p>
+        </center>
+    </div>
+  <div id='stars'></div>
+<div id='stars2'></div>
+<div id='stars3'></div>
 </body>
 </html>
