--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	$(function(){
 		$("#typed").typed({
-			strings: ["social medias: \n instagram: @nikalys \n snapchat: stepgigs \n twitter: @2207 \n"],
+			strings: ["instagram: @nikalys \n snapchat: stepgigs \n twitter: @2207 \n"],
 			typeSpeed: 0.7,
       callback: function(){
       }
@@ -28,43 +28,4 @@
 	</div>
 </div>
 </div>
-<center>
-<script>
-	var randomnumber = Math.round(Math.random() * 5);
-	var audio0 = new Audio('1.mp3');
-	var audio1 = new Audio('2.mp3');
-	var audio2 = new Audio('3.mp3');
-	var audio3 = new Audio('4.mp3');
-	var audio4 = new Audio('5.mp3');
-	var audio5 = new Audio('tea.mp3');
-	var $song 
-	
-	var audio6 = new Audio('wokeup.mp3');
-	audio6.play();
-		
-	switch(l) {
-	case 0:
-        	audio1.play();
-        	break;
-	case 1:
-        	audio2.play();
-        	break;
-	case 2:
-        	audio3.play();
-        	break;
-	case 3:
-        	audio4.play();
-        	break;
-	case 4:
-        	audio5.play();
-        	break;
-	case 5:
-		audio0.play();
-		break;
-	case 6:
-		break;
-		
-			   }
-</script>
-	</center>
 </div></body>
