--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <title>Fallsview Arena Ad</title>
 </head>
 <body>
+  <center>
 <img src="fallsview.png" width="1500px">
+  </center>
 </body>
 </html>
