--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <center>
-<img src="fallsview.png" width="1500px">
+<img src="https://i.imgur.com/yDjIk0t.jpg" width="1500px">
   </center>
 </body>
 </html>
